--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,59 @@
-/* You can add global styles to this file, and also import other style files */
+.navigation, .navigation li {
+  margin:0;
+  padding:0;
+}
+.navigation li {
+  border-top: 1px solid white;
+  list-style-type:none
+}
+.navigation li a {
+  background:
+  #E2E2E2 url(src/assets/Imagen-Fondo.png)
+  repeat-x left center;
+  padding:20px;
+  display:block;
+  font-family: Arial, Helvetica, sans-serif;
+  color:#333;
+  font-size:18px;
+  text-decoration:none
+}
+/* hover effects */
+.navigation li a:hover, .navigation li a:focus{
+  background: transparent none;
+}
+img{
+  display:block;
+  margin:auto;
+  }
+
+  #menu {
+    width: auto;
+    height: 50px;
+    margin-left: -8px;
+    margin-right: -8px;
+    margin-top: -16px; /* Margen superior negativo para pegar el menu al div con id "fondo_encabezado" */
+    }
+
+    #boton {
+    padding: 0px;
+    margin: auto;
+    /*margin-left: 28%; /* Modificar el margin para centrar los botones cuando se añado o quite alguno */
+    }
+
+    #boton li {
+    display: inline;
+
+    }
+
+    #boton li a {
+    line-height: 30px;
+    font-family: Arial;
+    font-size: 16px;
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px;
+    color: #fff;
+    font-family: 'Dosis', sans-serif;
+    text-transform: uppercase;
+
+    }
