--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,69 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Star Wars</title>
-  <base href="/"
+<header id="header">
+    <div class="navbar navbar-default">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-extended="false">
+                <span class="sr-only"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
 
-  < meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon"  type="image/x-icon" href="favicon.ico">
+        <a class="navbar-brand" [routerLink]="['/']">
 
-  <¡-- Cargar Librerias-->
-  <script type="text/javascript" src="node_modules/jquery/dist/jquery,min.js"></script>
-  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css_"/>
-  <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  <link rel="stylessheet" type="text/css" href="assets/css/styles.css">
-</head>
+        </a>
+        </div>
 
-<body>
-  <app-root>Loading...</app-root>
-  </body>
-</html>
+        <div class="collapse navbar-collapse" id="menuhor">
+          <ul id="boton">
+            <li>
+                <a [routerLink]="['/']">
+                  <img src="./assets/img/Boton.jpeg" id="Boton" width="30" height="20" />
+                   <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+                   Home
+                </a>
+            </li>
+
+            <li>
+                <a [routerLink]="['/']">
+
+                   Especies
+                </a>
+            </li>
+
+            <li>
+                <a [routerLink]="['/']">
+
+                   Naves
+                </a>
+            </li>
+
+            <li>
+                <a [routerLink]="['/']">
+
+                   Peliculas
+                </a>
+            </li>
+
+            <li>
+                <a [routerLink]="['/']">
+
+                   Personajes
+                </a>
+            </li>
+
+            <li>
+                <a [routerLink]="['/']">
+
+                   Planetas
+                </a>
+            </li>
+
+            <li>
+                <a [routerLink]="['/']">
+
+                   Vehiculos
+                </a>
+            </li>
+          </ul>
+        </div>
+    </div>
+</header>
