--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,69 +1,1 @@
-<header id="header">
-    <div class="navbar navbar-default">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-extended="false">
-                <span class="sr-only"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-
-        <a class="navbar-brand" [routerLink]="['/']">
-
-        </a>
-        </div>
-
-        <div class="collapse navbar-collapse" id="menuhor">
-          <ul id="boton">
-            <li>
-                <a [routerLink]="['/']">
-                  <img src="./assets/img/Boton.jpeg" id="Boton" width="30" height="20" />
-                   <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-                   Home
-                </a>
-            </li>
-
-            <li>
-                <a [routerLink]="['/']">
-
-                   Especies
-                </a>
-            </li>
-
-            <li>
-                <a [routerLink]="['/']">
-
-                   Naves
-                </a>
-            </li>
-
-            <li>
-                <a [routerLink]="['/']">
-
-                   Peliculas
-                </a>
-            </li>
-
-            <li>
-                <a [routerLink]="['/']">
-
-                   Personajes
-                </a>
-            </li>
-
-            <li>
-                <a [routerLink]="['/']">
-
-                   Planetas
-                </a>
-            </li>
-
-            <li>
-                <a [routerLink]="['/']">
-
-                   Vehiculos
-                </a>
-            </li>
-          </ul>
-        </div>
-    </div>
-</header>
+<app-nav-bar></app-nav-bar>
